feat: always show the nav bar

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@ https://www.tooplate.com/view/2120-ben-resume
 -->
 </head>
 
-<body data-spy="scroll" data-target="#navbarNav" data-offset="50">
+<body data-spy="scroll" data-target="#navbarNav" data-offset="0">
 
     <!-- MENU BAR -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar scroll navbar-expand-lg">
         <div class="container">
 
             <a class="navbar-brand" href="#">
-                Alberto Resume
+                Alberto's Resume
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,7 +63,7 @@ https://www.tooplate.com/view/2120-ben-resume
 
 
     <!-- HERO -->
-    <section class="hero d-flex flex-column justify-content-center align-items-center" id="intro">
+    <section class="hero d-flex flex-column justify-content-center align-items-center intro-body" id="intro">
 
          <div class="container">
             <div class="row">
