--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
-     <title>Alberto's Resume - Profile HTML Page</title>
+    <title>Alberto's Resume - Profile HTML Page</title>
 
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-     <meta name="description" content="">
-     <meta name="keywords" content="">
-     <meta name="author" content="Tooplate">
-     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="author" content="Tooplate">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-     <link rel="stylesheet" href="css/bootstrap.min.css">
-     <link rel="stylesheet" href="css/all.min.css">
-     <link rel="stylesheet" href="css/owl.carousel.min.css">
-     <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
 
-     <!-- MAIN CSS -->
-     <link rel="stylesheet" href="css/tooplate-ben-resume-style.css">
-<!--
+    <!-- MAIN CSS -->
+    <link rel="stylesheet" href="css/tooplate-ben-resume-style.css">
+    <!--
 Tooplate 2120 Alberto Resume
 https://www.tooplate.com/view/2120-ben-resume
 -->
@@ -34,7 +35,8 @@ https://www.tooplate.com/view/2120-ben-resume
                 Alberto's Resume
             </a>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -45,7 +47,7 @@ https://www.tooplate.com/view/2120-ben-resume
                     </li>
 
                     <li class="nav-item">
-                        <a href="#about" class="nav-link smoothScroll">About Me</a>
+                        <a href="#about" class="nav-link smoothScroll">About me</a>
                     </li>
 
                     <li class="nav-item">
@@ -65,24 +67,24 @@ https://www.tooplate.com/view/2120-ben-resume
     <!-- HERO -->
     <section class="hero d-flex flex-column justify-content-center align-items-center intro-body" id="intro">
 
-         <div class="container">
+        <div class="container">
             <div class="row">
 
-                  <div class="mx-auto col-lg-5 col-md-5 col-10">
-                      <img src="images/alberto.jpg" class="img-fluid" alt="Alberto Resume HTML Template">
-                  </div>
+                <div class="mx-auto col-lg-5 col-md-5 col-10">
+                    <img src="images/alberto.jpg" class="img-fluid" alt="Alberto Resume HTML Template">
+                </div>
 
-                   <div class="d-flex flex-column justify-content-center align-items-center col-lg-7 col-md-7 col-12">
-                        <div class="hero-text">
+                <div class="d-flex flex-column justify-content-center align-items-center col-lg-7 col-md-7 col-12">
+                    <div class="hero-text">
 
-                            <h1 class="hero-title">👋 Alberto, a digital nomad</h1>
+                        <h1 class="hero-title">👋 Alberto, a digital nomad</h1>
 
-                            <a href="#" class="email-link">
-                                hello@company.co
-                            </a>
+                        <a href="#" class="email-link">
+                            hello@company.co
+                        </a>
 
-                        </div>
                     </div>
+                </div>
 
             </div>
         </div>
@@ -94,100 +96,115 @@ https://www.tooplate.com/view/2120-ben-resume
             <div class="row">
 
                 <div class="col-lg-6 col-md-6 col-12">
-                    <h3 class="mb-4">This is Alberto's Resume</h3>
+                    <h3 class="mb-4">About me:</h3>
+                    <p>My name is Alberto Hurtado, I am based in Madrid</p>
+                    <p>
+                        I am a full stack developer specialized in Scala and Angular with MongoDB.
+                        I am passionate about quality software craftmanship following good practices and agile
+                        methodologies.
+                    </p>
+                    <p> My programming languages of preference are: Scala, Java, Typescript and Python.</p>
+                    <p>I also have some experience with AWS</p>
 
-                    <p>Alberto Resume HTML Template is brought to you by <a rel="nofollow" href="https://www.tooplate.com" target="_parent">Tooplate website</a>. You can feel free to edit and use this page for your small site. You are allowed to use this HTML template for any kind of purpose.</p>
-
-                    <p>However, please do not re-distribute the downloadable template ZIP file on any template collection website. This is strongly prohibited. Please contact Tooplate for more information.</p>
-
-                    <ul class="mt-4 mb-5 mb-lg-0 profile-list list-unstyled">
+<!--
+       <ul class="mt-4 mb-5 mb-lg-0 profile-list list-unstyled">
                         <li><strong>Full Name :</strong> Alberto Hurtado </li>
 
                         <li><strong>Email :</strong> alberto.hurt.99@gmail.com</li>
                     </ul>
+-->
+
                 </div>
 
                 <div class="col-lg-5 mx-auto col-md-6 col-12">
-                    <img src="images/true-agency.jpg" class="about-image img-fluid" alt="Alberto's Resume HTML Template">
+                    <img src="images/true-agency.jpg" class="about-image img-fluid"
+                        alt="Alberto's Resume HTML Template">
                 </div>
 
             </div>
             <div class="row about-third">
-            	<div class="col-lg-4 col-md-4 col-12">
-                <h3>Integer volutpat</h3>
-                <p>Sed eu risus tincidunt, finibus dolor non, gravida ex. Donec lacinia mi nec erat tempus, vel consectetur ante scelerisque. Ut blandit, risus in venenatis ultricies, lacus tellus fermentum.</p>
+                <div class="col-lg-4 col-md-4 col-12">
+                    <h3>Integer volutpat</h3>
+                    <p>Sed eu risus tincidunt, finibus dolor non, gravida ex. Donec lacinia mi nec erat tempus, vel
+                        consectetur ante scelerisque. Ut blandit, risus in venenatis ultricies, lacus tellus fermentum.
+                    </p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
-                <h3>Mauris semper</h3>
-                <p>Cras et nisl vestibulum, accumsan elit sed, pretium enim. Vestibulum in condimentum magna. Maecenas quam magna, iaculis eu turpis et, commodo pulvinar leo.</p>
+                    <h3>Mauris semper</h3>
+                    <p>Cras et nisl vestibulum, accumsan elit sed, pretium enim. Vestibulum in condimentum magna.
+                        Maecenas quam magna, iaculis eu turpis et, commodo pulvinar leo.</p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
-                <h3>Integer id neque</h3>
-                <p>Duis at mollis leo, venenatis congue ex. Cras urna dui, gravida euismod lectus et, cursus tempor nulla. Praesent at turpis quis ex tristique gravida quis eget eros.</p>
+                    <h3>Integer id neque</h3>
+                    <p>Duis at mollis leo, venenatis congue ex. Cras urna dui, gravida euismod lectus et, cursus tempor
+                        nulla. Praesent at turpis quis ex tristique gravida quis eget eros.</p>
                 </div>
             </div>
         </div>
     </section>
 
-     <section class="contact section-padding pt-0" id="contact">
-      <div class="container">
-        <div class="row">
+    <section class="contact section-padding pt-0" id="contact">
+        <div class="container">
+            <div class="row">
 
-          <div class="col-lg-6 col-md-6 col-12">
-            <form action="#" method="get" class="contact-form webform"  role="form">
+                <div class="col-lg-6 col-md-6 col-12">
+                    <form action="#" method="get" class="contact-form webform" role="form">
 
-                <div class="form-group d-flex flex-column-reverse">
-                    <input type="text" class="form-control" name="cf-name" id="cf-name" placeholder="Your Name">
+                        <div class="form-group d-flex flex-column-reverse">
+                            <input type="text" class="form-control" name="cf-name" id="cf-name" placeholder="Your Name">
 
-                    <label for="cf-name" class="webform-label">Full Name</label>
+                            <label for="cf-name" class="webform-label">Full Name</label>
+                        </div>
+
+                        <div class="form-group d-flex flex-column-reverse">
+                            <input type="email" class="form-control" name="cf-email" id="cf-email"
+                                placeholder="Your Email">
+
+                            <label for="cf-email" class="webform-label">Your Email</label>
+                        </div>
+
+                        <div class="form-group d-flex flex-column-reverse">
+                            <textarea class="form-control" rows="5" name="cf-message" id="cf-message"
+                                placeholder="Your Message"></textarea>
+
+                            <label for="cf-message" class="webform-label">Message</label>
+                        </div>
+
+                        <button type="submit" class="form-control" id="submit-button" name="submit">Send</button>
+                    </form>
                 </div>
 
-                <div class="form-group d-flex flex-column-reverse">
-                    <input type="email" class="form-control" name="cf-email" id="cf-email" placeholder="Your Email">
+                <div class="mx-auto col-lg-4 col-md-6 col-12">
+                    <h3 class="my-4 pt-4 pt-lg-0">Say hello</h3>
 
-                    <label for="cf-email" class="webform-label">Your Email</label>
+                    <p class="mb-1">010-020-0340</p>
+
+                    <p>
+                        <a href="#">
+                            hello@company.co
+                            <i class="fas fa-arrow-right custom-icon"></i>
+                        </a>
+                    </p>
+
+                    <ul class="social-links mt-2">
+                        <li><a href="https://fb.com/tooplate" rel="noopener" class="fab fa-facebook"></a></li>
+                        <li><a href="#" rel="noopener" class="fab fa-twitter"></a></li>
+                        <li><a href="#" rel="noopener" class="fab fa-instagram"></a></li>
+                        <li><a href="#" rel="noopener" class="fab fa-linkedin"></a></li>
+                        <li><a href="#" rel="noopener" class="fab fa-youtube"></a></li>
+                    </ul>
                 </div>
 
-                <div class="form-group d-flex flex-column-reverse">
-                    <textarea class="form-control" rows="5" name="cf-message" id="cf-message" placeholder="Your Message"></textarea>
-
-                    <label for="cf-message" class="webform-label">Message</label>
-                </div>
-
-                <button type="submit" class="form-control" id="submit-button" name="submit">Send</button>
-            </form>
-          </div>
-
-            <div class="mx-auto col-lg-4 col-md-6 col-12">
-                <h3 class="my-4 pt-4 pt-lg-0">Say hello</h3>
-
-                <p class="mb-1">010-020-0340</p>
-
-                <p>
-                    <a href="#">
-                        hello@company.co
-                    <i class="fas fa-arrow-right custom-icon"></i>
-                    </a>
-                </p>
-
-                <ul class="social-links mt-2">
-                    <li><a href="https://fb.com/tooplate" rel="noopener" class="fab fa-facebook"></a></li>
-                    <li><a href="#" rel="noopener" class="fab fa-twitter"></a></li>
-                    <li><a href="#" rel="noopener" class="fab fa-instagram"></a></li>
-                    <li><a href="#" rel="noopener" class="fab fa-linkedin"></a></li>
-                    <li><a href="#" rel="noopener" class="fab fa-youtube"></a></li>
-                </ul>
             </div>
-
         </div>
-      </div>
     </section>
-     <!-- SCRIPTS -->
-     <script src="js/jquery.min.js"></script>
-     <script src="js/bootstrap.min.js"></script>
-     <script src="js/smoothscroll.js"></script>
-     <script src="js/owl.carousel.min.js"></script>
-     <script src="js/custom.js"></script>
+    <!-- SCRIPTS -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/smoothscroll.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/custom.js"></script>
 
 </body>
+
 </html>
