feat: added work experience

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@ https://www.tooplate.com/view/2120-ben-resume
                     </p>
                     <p> My programming languages of preference are: Scala, Java, Typescript and Python.</p>
                     <p>I also have some experience with AWS</p>
+                </div>
 
 <!--
        <ul class="mt-4 mb-5 mb-lg-0 profile-list list-unstyled">
@@ -114,30 +115,29 @@ https://www.tooplate.com/view/2120-ben-resume
                     </ul>
 -->
 
-                </div>
-
                 <div class="col-lg-5 mx-auto col-md-6 col-12">
                     <img src="images/true-agency.jpg" class="about-image img-fluid"
                         alt="Alberto's Resume HTML Template">
                 </div>
 
             </div>
+            <h4 class="mb-4">Work experience:</h3>
             <div class="row about-third">
                 <div class="col-lg-4 col-md-4 col-12">
-                    <h3>Integer volutpat</h3>
-                    <p>Sed eu risus tincidunt, finibus dolor non, gravida ex. Donec lacinia mi nec erat tempus, vel
-                        consectetur ante scelerisque. Ut blandit, risus in venenatis ultricies, lacus tellus fermentum.
+                    <h3>Alten delivery center</h3>
+                    <p>19th July 2021 - current</p>
+                    <p>Working for the Belgian client Macq, in a project for smart mobility management
                     </p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
-                    <h3>Mauris semper</h3>
-                    <p>Cras et nisl vestibulum, accumsan elit sed, pretium enim. Vestibulum in condimentum magna.
-                        Maecenas quam magna, iaculis eu turpis et, commodo pulvinar leo.</p>
+                    <h3>IF LASTMILE</h3>
+                    <p>27th February 2021 - 20th June 2021</p>
+                    <p>Internship at a start up, which integrated with the main e-commerce platforms to offer extra shipping options</p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
-                    <h3>Integer id neque</h3>
-                    <p>Duis at mollis leo, venenatis congue ex. Cras urna dui, gravida euismod lectus et, cursus tempor
-                        nulla. Praesent at turpis quis ex tristique gravida quis eget eros.</p>
+                    <h3>Amazon</h3>
+                    <p>6th July 2020 - 31st December 2020</p>
+                    <p>Internship at Amazon Business, where I did a project to automate manual tasks done by the person on call when he received monitoring alarms</p>
                 </div>
             </div>
         </div>
