--- a/index.html
+++ b/index.html
@@ -121,11 +121,17 @@ https://www.tooplate.com/view/2120-ben-resume
                 </div>
 
             </div>
-            <h4 class="mb-4">Work experience:</h3>
+            <h4 class="mb-4">Work experience:</h4>
             <div class="row about-third">
                 <div class="col-lg-4 col-md-4 col-12">
+                    <h3>Axpe Consulting</h3>
+                    <p>November 2023 - current</p>
+                    <p>Working for the Spanish client Telefonica, in a project for privacy management
+                    </p>
+                </div>
+                <div class="col-lg-4 col-md-4 col-12">
                     <h3>Alten delivery center</h3>
-                    <p>19th July 2021 - current</p>
+                    <p>19th July 2021 - November 2023</p>
                     <p>Working for the Belgian client Macq, in a project for smart mobility management
                     </p>
                 </div>
@@ -153,7 +159,7 @@ https://www.tooplate.com/view/2120-ben-resume
 
                     <p>
                         <a href="#">
-                            hello@company.co
+                            alberto.hurt.99@gmail.com
                             <i class="fas fa-arrow-right custom-icon"></i>
                         </a>
                     </p>
